--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -2,6 +2,7 @@ defusedxml==0.4.1
 Django==1.10.3
 django-braces==1.10.0
 django-cors-middleware==1.3.1
+django-filter==1.0.0
 django-oauth-toolkit==0.10.0
 django-rest-framework-social-oauth2==1.0.4
 djangorestframework==3.5.3
