--- a/client/package.json
+++ b/client/package.json
@@ -21,12 +21,14 @@
     "angular": "^1.5.8",
     "angular-bootstrap-alert-modals": "^1.1.1",
     "angular-cookies": "^1.5.8",
+    "angular-moment": "^1.0.0",
     "angular-oauth2": "^4.1.0",
     "angular-resource": "^1.5.8",
     "angular-route": "^1.5.8",
     "bootstrap": "^3.3.7",
     "bootstrap-social": "^5.0.0",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "moment": "^2.17.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.5.8",
