--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "angular-oauth2": "^4.1.0",
     "angular-resource": "^1.5.8",
     "angular-route": "^1.5.8",
+    "angular-ui-bootstrap": "^2.3.0",
     "bootstrap": "^3.3.7",
     "bootstrap-social": "^5.0.0",
     "jquery": "^3.1.1",
